Fix issue with beta release banner overflowing into page

--- a/client/src/root/banner/banner.css
+++ b/client/src/root/banner/banner.css
@@ -2,13 +2,14 @@
 
 .banner {
     background: red;
-    right: 0;
-    top: 0;
-    left: 0;
     text-align: center;
-    vertical-align: middle;
     height: $banner-height;
     font-size: 1.2em;
+    display: table;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
 }
 
 .banner a {
